fix(styles): remove forced box shadow on iOS mobile devices in input fields

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -108,6 +108,7 @@ textarea {
     font-size: 16px;
     border: 2px solid #aaa;
     font-family: 'Menlo', 'Monaco', 'Courier', monospace;
+    box-shadow: none;
 }
 
 input::placeholder,
